static/scss/footer.scss
/*---------------------------------------
   SECTION:  FOOTER
-----------------------------------------*/
footer {
  background:#000;
  padding:40px 30px 60px 30px;
  text-align: left;
  color:#808080;
  font-size:.83em;
  line-height: 1.2em;

  .social-buttons-list {
    margin-bottom: 60px;
  }

  .footer-links {
    margin: 24px 0;

    a {
      display:inline-block;
      margin:0 24px 0 0;
      color:#4c8399;
    }
  }

  .footer-address, .footer-copy {
    margin-bottom: 24px;
    display: block;
  }

  .footer-cta {
    display: inline-block;
    vertical-align: middle;
    width: 100%;
    min-width: 150px;
    padding: 0 0 60px 0;

    @include breakpoint(phone) {
      display: block;
      margin: 20px 0;
      width: 100%;
    }

    &.non-marketing-pages {
      min-width: 300px;
      margin-bottom: 60px;
    }

    a {
      width: 60%;
      float: right;

      &.no-float {
        float: none;
      }

      @include breakpoint(phone) {
        float: none;
        width: 100%;
      }
    }
  }

  .footer-cta-left {
    padding: 0;
    width: 40%;
    display: inline-block;
    vertical-align: middle;

    @include breakpoint(phone) {
      display: block;
      margin: 20px 0;
      width: 100%;
    }

    a {
      width: 80%;
      float: right;

      @include breakpoint(phone) {
        float: none;
        width: 100%;
      }
    }
  }
}

